// Marketplace DB — типы и констрейнты.
// Структура (таблицы/колонки/связи) не менялась, кроме:
//   - переименований по согласованию (см. ниже)
//   - createdAt/updatedAt/deletedAt добавлены в DeliveryAddress и OrderRecipient
//
// Переименования: password -> passwordHash, EURO -> EUR,
//   OrderRecipient.phoneNumberId -> phoneId, Order.recipientId -> orderRecipientId,
//   DeliveryAddress.address -> addressLine, DeliveryAddress.street -> building.
//
// Домены (Postgres, см. schema.sql):
//   uint   = integer CHECK (VALUE > 0)     -- все FK и quantity
//   amount = numeric(12,2) CHECK (VALUE >= 0) -- все деньги
// PK везде integer GENERATED ALWAYS AS IDENTITY, без CHECK.
//
// TimezoneEnum убран: IANA-таймзон ~400 и tzdata обновляется несколько раз в год,
// enum потребовал бы ALTER TYPE на каждое обновление. Заменён на varchar(64).

Enum LanguageEnum {
  en
  ua
}

Enum RoleEnum {
  owner
  seller
  admin
  user
}

Enum GenderEnum {
  male
  female
}

Enum CountryCodeEnum {
  UA
  US
  PL
  DE
  GB
}

Enum CurrencyEnum {
  UAH
  EUR
  USD
}

Enum StatusEnum {
  created
  pending_payment
  failed_payment
  paid
  confirmed
  preparing
  shipped
  delivered
  completed
  canceled
  refunded
}

Table Identity {
  id integer [pk, increment]
  email citext [unique, null]
  phoneId uint [ref: - Phone.id, unique, null]
  passwordHash varchar(255) [not null]
  role RoleEnum [not null, default: 'user']
  activatedAt timestamptz [null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Note: '''
  CHECK: email IS NOT NULL OR phoneId IS NOT NULL — нужен хотя бы один способ входа
  CHECK: activatedAt IS NULL OR activatedAt >= createdAt
  CHECK: deletedAt IS NULL OR deletedAt >= createdAt
  citext даёт регистронезависимый unique без .toLowerCase() в коде
  '''
}

Table Phone {
  id integer [pk, increment]
  countryCode CountryCodeEnum [not null]
  rawNumber varchar(32) [not null]
  fullNumber varchar(16) [not null]
  nationalNumber varchar(15) [not null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Note: '''
  CHECK: fullNumber ~ '^\+[1-9][0-9]{7,14}$' — E.164
  CHECK: nationalNumber ~ '^[0-9]{4,15}$'
  fullNumber НЕ unique: OrderRecipient создаёт снапшот-копию номера на каждый заказ.
  Уникальность телефона как логина держит Identity.phoneId.
  '''
}

Table User {
  id integer [pk, increment]
  identityId uint [ref: - Identity.id, unique, not null]
  firstName varchar(100) [null]
  lastName varchar(100) [null]
  fullName varchar(201) [null, note: "GENERATED ALWAYS AS (nullif(trim(coalesce(firstName,'') || ' ' || coalesce(lastName,'')), '')) STORED"]
  dateOfBirth date [null]
  gender GenderEnum [null]
  language LanguageEnum [not null, default: 'en']
  timezone varchar(64) [not null, default: 'Europe/London']
  deliveryAddressId uint [ref: - DeliveryAddress.id, unique, null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Note: '''
  CHECK: dateOfBirth IS NULL OR dateOfBirth < current_date
  Возрастной порог (18+) не в БД: бизнес-правило, зависит от юрисдикции.
  user query will be populated by email,phoneNumber from jwt payload,
  doesn`t projection email,phoneNumber
  '''
}

Table DeliveryAddress {
  id integer [pk, increment]
  addressLine varchar(255) [not null]
  city varchar(100) [not null]
  building varchar(32) [null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]
}

Table Brand {
  id integer [pk, increment]
  slug varchar(120) [unique, not null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Note: "CHECK: slug ~ '^[a-z0-9]+(-[a-z0-9]+)*$'"
}

Table BrandTranslation {
  id integer [pk, increment]
  brandId uint [ref: > Brand.id, not null]
  name varchar(255) [not null]
  language LanguageEnum [not null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Indexes {
    (brandId, language) [unique]
  }

  Note: 'FK ON DELETE CASCADE — перевод без бренда бессмысленен'
}

Table Category {
  id integer [pk, increment]
  slug varchar(120) [unique, not null]
  parentCategoryId uint [ref: > Category.id, null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Note: '''
  CHECK: parentCategoryId <> id — защита от самоссылки
  Циклы длиннее одного шага (A->B->A) CHECK не ловит — это на приложении.
  parentCategoryId IS NULL = корень дерева. FK ON DELETE RESTRICT.
  '''
}

Table CategoryTranslation {
  id integer [pk, increment]
  categoryId uint [ref: > Category.id, not null]
  name varchar(255) [not null]
  language LanguageEnum [not null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Indexes {
    (categoryId, language) [unique]
  }
}

Table Product {
  id integer [pk, increment]
  categoryId uint [ref: > Category.id, not null]
  brandId uint [ref: > Brand.id, not null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]
}

Table ProductTranslation {
  id integer [pk, increment]
  productId uint [ref: > Product.id, not null]
  title varchar(255) [not null]
  description text [null]
  language LanguageEnum [not null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Indexes {
    (productId, language) [unique]
  }
}

Table Seller {
  id integer [pk, increment]
  userId uint [ref: - User.id, unique, not null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]
}

Table ProductVariant {
  id integer [pk, increment]
  productId uint [ref: > Product.id, not null]
  sku varchar(64) [unique, not null]
  barcode varchar(14) [unique, null]
  slug varchar(120) [unique, not null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Indexes {
    productId
  }

  Note: '''
  CHECK: sku <> '' (btrim)
  CHECK: slug ~ '^[a-z0-9]+(-[a-z0-9]+)*$'
  CHECK: barcode IS NULL OR barcode ~ '^[0-9]{8,14}$'
  '''
}

Table SellerOffer {
  id integer [pk, increment]
  sellerId uint [ref: > Seller.id, not null]
  variantId uint [ref: > ProductVariant.id, not null]
  sellerSku varchar(64) [not null]
  price amount [not null]
  currency CurrencyEnum [not null]
  discountPrice amount [null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]
  quantity integer [not null, default: 0, note: 'физически последняя колонка — добавлена ALTER TABLE поверх схемы ДЗ #12']

  Indexes {
    (sellerId, sellerSku) [unique]
    (sellerId, variantId) [unique]
    variantId
    sellerId
  }

  Note: '''
  CHECK: discountPrice IS NULL OR discountPrice <= price
  discountPrice NULL = скидки нет (отличается от «скидка 0»)
  sellerSku уникален в рамках продавца, а не глобально
  CHECK: quantity >= 0 — integer, а не домен uint (тот запрещает 0,
  а распроданный оффер — норма) и не amount (это остаток штук, а не деньги)
  '''
}

Table OrderRecipient {
  id integer [pk, increment]
  buyerId uint [ref: > User.id, not null]
  fullName varchar(201) [not null]
  phoneId uint [ref: - Phone.id, unique, not null]
  deliveryAddressId uint [ref: - DeliveryAddress.id, unique, not null]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Indexes {
    buyerId
  }

  Note: '''
  Snapshot of user for order.
  phoneId / deliveryAddressId — новые строки Phone/DeliveryAddress,
  скопированные из профиля покупателя или введённые кастомно. Поэтому 1:1.
  buyerId — N:1, у покупателя много заказов.
  '''
}

Table Order {
  id integer [pk, increment]
  publicId uuid [unique, not null, default: `gen_random_uuid()`]
  orderRecipientId uint [ref: - OrderRecipient.id, unique, not null]
  status StatusEnum [not null, default: 'created']
  totalAmount amount [not null, note: 'snapshot value, итог К ОПЛАТЕ (уже со скидкой)']
  discountAmount amount [not null, default: 0, note: 'snapshot value, сколько скинули']
  currency CurrencyEnum [not null, note: 'snapshot value']
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Indexes {
    status
    createdAt
  }

  Note: '''
  Переходы StatusEnum валидирует приложение, не БД:
  машина состояний зависит от роли, оплаты и прав — триггер дублировал бы логику.
  '''
}

Table OrderProduct {
  orderId uint [ref: > Order.id, not null]
  offerId uint [ref: > SellerOffer.id, not null]
  quantity uint [not null]
  price amount [not null, note: 'snapshot value']
  discountPrice amount [null, note: 'snapshot value']
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Indexes {
    (orderId, offerId) [pk]
    offerId
  }

  Note: '''
  M:N между Order и SellerOffer.
  CHECK: discountPrice IS NULL OR discountPrice <= price
  quantity > 0 через домен uint
  FK orderId ON DELETE CASCADE, offerId ON DELETE RESTRICT —
  удаление оффера не должно уносить позиции исторических заказов.
  '''
}

// Направление денег кодирует TransactionTypeEnum; amount у Transaction —
// всегда неотрицательная величина (тот же домен "amount", что и у денег
// в остальной схеме).
Enum TransactionTypeEnum {
  DEPOSIT
  PAYMENT
  WITHDRAWAL
}

Enum TransactionStatusEnum {
  PENDING
  FAILED
  SUCCESS
}

Table Transaction {
  id uint [pk, increment]
  userId uint [ref: > User.id, not null]
  amount amount [not null]
  status TransactionStatusEnum [not null, default: 'PENDING']
  type TransactionTypeEnum [not null, default: 'PAYMENT']
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Note: 'FK userId ON DELETE RESTRICT — финансовая история пользователя не должна исчезать вместе с ним.'
}

Enum BackgroundJobTypeEnum {
  ORDER
}

Enum BackgroundJobStatusEnum {
  QUEUED
  PROCESSING
  READY
  FAILED
  INTERRUPTED
}

Table BackgroundJob {
  id uint [pk, increment]
  type BackgroundJobTypeEnum [not null]
  status BackgroundJobStatusEnum [not null, default: 'QUEUED']
  payload jsonb [not null, note: 'jsonb, не json — поддерживает индексацию и containment-запросы (@>)']
  dedupeKey varchar(255) [unique, not null]
  startedAt timestamptz [null]
  finishedAt timestamptz [null]
  errorMessage text [null]
  attempts integer [not null, default: 0]
  orderId uint [ref: > Order.id, null]

  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null, default: `now()`]
  deletedAt timestamptz [null]

  Note: '''
  dedupeKey уникален: повторная постановка одной и той же задачи не создаёт дубликат.
  CHECK: attempts >= 0, dedupeKey <> ''
  FK orderId ON DELETE RESTRICT — удаление заказа не должно молча уносить историю его обработки.
  '''
}